--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Serveur MCP pour interagir avec l'API LayerOps",
   "type": "module",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc && chmod +x dist/index.js",
     "start": "node dist/index.js",
